# dl-regime

./: .gitignore  README.md  pyproject.toml  run_train.py
configs/: lstm.yaml  tcn.yaml  transformer.yaml
src/dl_regime/: __init__.py
src/dl_regime/configs/: __init__.py  default_config.toml
src/dl_regime/data/: __init__.py  dataset.py
src/dl_regime/models/: __init__.py  base.py  lstm.py  tcn.py  transformer.py
src/dl_regime/signals/: __init__.py  regime_signal.py
src/dl_regime/trainer/: __init__.py  wfa_trainer.py
