[project]
name = "dl-regime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "joblib>=1.5.3",
    "lightning>=2.6.1",
    "mlflow>=3.10.1",
    "numpy>=2.4.3",
    "pandas>=2.3.3,<3.0.0",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "torch==2.6.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
